# cql2cpp

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  TODO.md  conanfile.txt  dockerfile  package.xml
.github/workflows/: cmake-single-platform.yml
include/: cql2_lexer.h
include/cql2cpp/: ast_node.h  bbox_reader.h  cql2_lexer-internal.h  cql2_lexer.h  cql2_parser.h  cql2_parser_json.h  cql2_parser_text.h  cql2cpp.h  evaluator.h  evaluator_array.h  evaluator_ast_node.h  evaluator_bool.h  evaluator_compare.h  evaluator_function.h  evaluator_in.h  evaluator_literal.h  evaluator_property.h  evaluator_spatial.h  feature_source.h  feature_source_db.h  feature_source_geojson.h  feature_source_json.h  function.h  functor.h  functor_avg.h  functor_buffer.h  functor_related_bins.h  global_yylex.h  id_generator.h  json_helper.h  node_evaluator.h  node_type.h  operator.h  sql_converter.h  tree_dot.h  value.h  value_compare.h
include/cql2cpp/argparse/: argparse.hpp
include/cql2cpp/data_source/: data_source.h  db_data_source.h  json_data_source.h
include/cql2cpp/evaluator/: array.h  ast_node.h  bool.h  compare.h  function.h  in.h  literal.h  node_evaluator.h  property.h  spatial.h  tree_evaluator.h  value_compare.h
scripts/: test.sh
src/: ast_node.cc  cql2_lexer.l  cql2_parser.y  global_yylex.cc  id_generator.cc  main.cc  value.cc
test/: test_bbox_reader.cc  test_parse.cc  test_sql.cc
test/geojson/: 1.geojson
test/indoorjson/: array.txt  bbox.txt  binary.txt  binlocations.txt  clause7_15.txt  example79.txt  example80.txt  example81.txt  is_in_list.txt  is_not_in_list.txt  labels.txt  localization.txt  related_bins.txt  spatial.txt
